Rename composer packade to lower case

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "itbz/DataMapper",
+    "name": "itbz/datamapper",
     "description": "Generic data mapper",
     "keywords": ["mapper", "data mapper"],
     "homepage": "https://github.com/itbz/DataMapper",
